--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru"  class="h-100">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AIHub - Универсальный интерфейс для работы с AI</title>
+    <title>Vue Проект</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="h-100">
+    <div id="app" class="h-100"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
